--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_dash: ^1.0.0
   intl: ^0.17.0
+  sizer: ^2.0.15
   fluttertoast: ^8.1.1
 
 dev_dependencies:
