--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,15 @@ dependencies:
   intl: ^0.17.0
   sizer: ^2.0.15
   fluttertoast: ^8.1.1
+  bloc: ^8.1.1
+  flutter_bloc: ^8.1.2
+  dio: ^4.0.6
+  shared_preferences: ^2.0.17
+  conditional_builder_null_safety: ^0.0.6
+  #firebase
+  firebase_core: ^2.6.1
+  firebase_auth: ^4.2.8
+
 
 dev_dependencies:
   flutter_test:
