--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   #firebase
   firebase_core: ^2.6.1
   firebase_auth: ^4.2.8
-
+  cloud_firestore: ^4.4.2
 
 dev_dependencies:
   flutter_test:
