--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,8 @@ dependencies:
   #firebase
   firebase_core: ^2.6.1
   firebase_auth: ^4.2.8
-
+  google_sign_in: ^6.0.0
+  flutter_facebook_auth: ^5.0.7
 
 dev_dependencies:
   flutter_test:
