--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   dio: ^4.0.6
   shared_preferences: ^2.0.17
   conditional_builder_null_safety: ^0.0.6
+  google_maps_flutter: ^2.2.3
+  location: ^4.2.0
+  flutter_polyline_points: ^1.0.0
   #firebase
   firebase_core: ^2.6.1
   firebase_auth: ^4.2.8
