--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   dio: ^4.0.6
   shared_preferences: ^2.0.17
   conditional_builder_null_safety: ^0.0.6
+  searchfield: ^0.7.5
   #firebase
   firebase_core: ^2.6.1
   firebase_auth: ^4.2.8
