--- a/android/local.properties
+++ b/android/local.properties
@@ -1,4 +1,4 @@
-sdk.dir=C:\\Users\\YOM\\AppData\\Local\\Android\\sdk
+sdk.dir=C:\\Users\\Nada\\AppData\\Local\\Android\\sdk
 flutter.sdk=C:\\src\\flutter
 =======
 flutter.buildMode=debug
