--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,7 +77,15 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/
+    - assets/images/
+  fonts:
+    - family: kalam
+      fonts:
+        - asset: assets/fonts/Kalam-Light.ttf
+        - asset: assets/fonts/Kalam-Bold.ttf
+        - asset: assets/fonts/Kalam-Regular.ttf
+
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
