DataTime prob fixed

--- a/android/local.properties
+++ b/android/local.properties
@@ -1,11 +1,4 @@
-<<<<<<< HEAD
-sdk.dir=C:\\Users\\YOM\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\src\\flutter
-=======
-sdk.dir=C:\\Users\\Nada\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\src\\flutter
-=======
->>>>>>> c0d20ed281b171d8f7e31d12a7325371b7728090
-flutter.buildMode=debug
+sdk.dir=C:\\Users\\Helmy Tayel\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\src\\flutter\\flutter
 flutter.versionName=1.0.0
 flutter.versionCode=1
