--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   firebase_auth: ^4.2.8
   cloud_firestore: ^4.4.2
   google_sign_in: ^6.0.1
+  firebase_storage: ^11.0.14
 dev_dependencies:
   flutter_test:
     sdk: flutter
