--- a/android/local.properties
+++ b/android/local.properties
@@ -1,6 +1,5 @@
-sdk.dir=C:\\Users\\Nada\\AppData\\Local\\Android\\sdk
-=======
-flutter.sdk=C:\\src\\flutter
+flutter.sdk=C:\\src\\flutter_windows_3.0.5-stable\\flutter
+sdk.dir=D:\\programs\\android
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
