--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   cloud_firestore: ^4.4.2
   google_sign_in: ^6.0.1
   firebase_storage: ^11.0.14
+  restart_app: ^1.1.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
