--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  #mqtt_client: ^9.8.1
   flutter_dash: ^1.0.0
   intl: ^0.17.0
   sizer: ^2.0.15
@@ -56,6 +56,7 @@ dependencies:
   google_sign_in: ^6.0.1
   firebase_storage: ^11.0.14
   restart_app: ^1.1.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
