--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,7 @@ dependencies:
   flutter_polyline_points: ^1.0.0
   image_picker: ^0.8.6+3
   otp_text_field: 1.1.3
-  #mqtt_client: ^9.8.1
+  mqtt_client: ^9.8.1
   #firebase
   firebase_core: ^2.6.1
   firebase_auth: ^4.2.8
