--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,6 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  #mqtt_client: ^9.8.1
   flutter_dash: ^1.0.0
   intl: ^0.17.0
   sizer: ^2.0.15
@@ -50,7 +49,8 @@ dependencies:
   flutter_polyline_points: ^1.0.0
   image_picker: ^0.8.6+3
   otp_text_field: 1.1.3
-  #mqtt_client: ^9.8.1
+  #flutter_otp: ^0.3.2
+  mqtt_client: ^9.8.1
   #firebase
   firebase_core: ^2.6.1
   firebase_auth: ^4.2.8
@@ -87,7 +87,7 @@ flutter:
   fonts:
     - family: kalam
       fonts:
-        - asset: assets/fonts/
+        - asset: assets/fonts/Kalam-Light.ttf
 
 
   #   - images/a_dot_ham.jpeg
