--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   google_sign_in: ^6.0.1
   firebase_storage: ^11.0.14
   restart_app: ^1.1.2
+  mqtt_client: ^9.8.1
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
