--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_polyline_points: ^1.0.0
   image_picker: ^0.8.6+3
   otp_text_field: 1.1.3
+  get: ^4.6.5
   #flutter_otp: ^0.3.2
   #firebase
   firebase_core: ^2.6.1
