--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -74,7 +74,8 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    //implementation 'com.google.firebase:firebase-auth-ktx:21.3.0'
-    //implementation platform('com.google.firebase:firebase-bom:31.2.2')
-    //implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.3.0'
+    implementation platform('com.google.firebase:firebase-bom:31.2.2')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation "androidx.browser:browser:1.2.0"
 }
