--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   restart_app: ^1.1.2
   background_fetch: '^1.1.3'
   mqtt_client: ^9.8.1
+  double_back_to_close_app: ^2.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
