--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-flutter.sdk=C:\\src\\flutter
-sdk.dir=C:\\Users\\Nada\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\src\\flutter_windows_3.0.5-stable\\flutter
+sdk.dir=D:\\programs\\android
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
